Added credit sources list generator inside MarketMediaSources Feedback #701

--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketMediaKit/MarketMediaKit.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketMediaKit/MarketMediaKit.scss
@@ -9,4 +9,11 @@
 			width: 100%;
 		}
 	}
+
+	.credits {
+		font-size: 2rem;
+		list-style: none;
+		margin-top: $sizeGrid;
+		padding-left: 0;
+	}
 }
