Hotfix for a temporary solution

--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
@@ -18,6 +18,10 @@
 		flex-shrink: 0;
 		flex-basis: #{100% /3};
 
+		&:first-child {
+			margin-bottom: 15px;
+		}
+
 		&:nth-child(even) {
 			color: $colorSecondary;
 
