--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
@@ -18,10 +18,6 @@
 		flex-shrink: 0;
 		flex-basis: #{100% /3};
 
-		&:first-child {
-			margin-bottom: 15px;
-		}
-
 		&:nth-child(even) {
 			color: $colorSecondary;
 
@@ -52,6 +48,7 @@
 		@include size(100%, auto);
 		display: inline-block;
 		margin-top: $sizeGrid * 0.5;
+		min-height: 36px;
 		text-transform: uppercase;
 		font: 2rem / 1 $fontOpenSans;
 	}
