--- a/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
+++ b/source/frontend/src/block/MarketMap/MarketPanel/block/MarketNumbers/MarketNumbers.scss
@@ -16,7 +16,7 @@
 	.statistic {
 		list-style: none;
 		flex-shrink: 0;
-		flex-basis: #{100% /3};
+		flex-basis: (100% /3);
 
 		&:nth-child(even) {
 			color: $colorSecondary;
