--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -40,7 +40,7 @@
 
     <!-- ChatBotCSS -->
     <link rel="stylesheet" type="text/css" href="https://files-manywho-com.s3.amazonaws.com/e422e20c-aeaa-4c5c-b8a9-cc944d796425/chatbot-style.css">
-
+    <script type="text/javascript" src="../js/website-optimizer.js"></script>
 </head>
 <body>
 <div id="app"></div>
