Added another tracking code

--- a/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
+++ b/source/drupal/docroot/themes/custom/spectrum/templates/html.html.twig
@@ -97,5 +97,10 @@
     {#})();#}
 {#</script>#}
 <!-- End of LiveChat code -->
+{% if adv_marketing %}
+    <!-- Tracking tag. Place in the <body> section of webpage -->
+    <!-- Privacy policy at http://tag.brandcdn.com/privacy -->
+    <script type="text/javascript" src="//tag.brandcdn.com/autoscript/spectrumreach_vfhwuk1roujqvda9/SpectrumReachInternalMarketing.js"></script>
+{% endif %}
 </body>
 </html>
